
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
 
[project]
name = "traffic"
version = "0.1.0"
requires-python = ">=3.10"
 
dependencies = [
    "pydantic-settings>=2.0",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
]
 
[project.optional-dependencies]
dev = [
    "black>=24.0",
]
 
[tool.setuptools.packages.find]
where = ["."]
 
[tool.black]
line-length = 100
 